Revision history for {{$dist->name}}

{{$NEXT}}

0.09      2017-01-13 07:13:38 -0500
  - Test::Alien::Run#note and #diag can be chained like the other 
    methods

0.08      2016-12-29 18:03:35 -0500
  - Fixes to silence warnings coming from recent versions of Test2::Suite

0.07      2016-05-10 11:31:59 -0400
  - Require non-experimental Test2/Test-Simple and Test2::Suite

0.06      2016-04-27 14:52:12 -0400
  - Better diagnostic when there is a link exception.

0.05      2016-04-25 06:59:01 -0400
  - Migrated to Test2 API - This will likely break your
    test if you are using Test::Stream.  Sorry!

0.04      2015-12-29 13:52:08 -0500
  - Tweaked test skips based on cpantesters feedback

0.03      2015-12-26 17:28:45 -0700
  - Fixed (hopefully) test failure in
    test_alien_synthetic_libarchive.t
    when FFI::Platypus was installed
    but FFI::Raw was not

0.02      2015-12-25 22:18:53 -0700
  - Fixes for Windows.
  - First CPAN release.

0.01      2015-12-25 20:20:16 -0700
  - initial version