@@ -1,2 +1,3 @@
 /Test-Alien-*
 /.build
+*.swp
